2009-02-02  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* ParseXSDoc.pm (xsdocparse): Always use Data::Dumper on MSWin32
	for serialization.  Storable seems to consistently fail there,
	stating 'Magic number checking on storable file failed'.

2008-11-15  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GBoxed.xs (gperl_register_boxed): Use the copy of the passed-in
	package name for the key of info_by_package to avoid problems when
	the package name is dynamically allocated.

	* GBoxed.xs (gperl_register_boxed)
	* GObject.xs (gperl_register_object)
	* GType.xs (gperl_register_fundamental): Always insert into the
	lookup tables in the correct order to avoid prematurely freeing
	the package name.

2008-11-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs (gperl_type_from_package): Also try
	gperl_param_spec_type_from_package on the package.

2008-10-19  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: ExtUtils::MakeMaker 6.46 removed support for
	EXTRA_META in favor of the new META_MERGE and META_ADD.  Adapt.

2008-09-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* Makefile.PL
	* NEWS
	* README: Stable release 1.200.

2008-09-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* TODO: Remove the entry about hushing about documentation
	generation.  That's done.

2008-09-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.193.

2008-09-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GClosure.xs (gperl_callback_invoke): Instead of putting a mortal
	copy of the user data on the stack, increment its ref count and
	mortalize it.  This ensure that modifications to $_[-1] in the
	callback actually change the user data.  Patch by Kevin Ryde.

	* MANIFEST
	* GObject.xs
	* t/lazy-loader.t: Make sure the lazy loader can handle being
	invoked on packages which aren't registered with the Glib type
	system.  This can happen when a non-registered package is setup to